[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusquant"
version = "0.1.0"
description = "NexusQuant - 量化交易系统"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "NexusQuant Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=1.10.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-instrumentation-logging>=0.42b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
grpc = [
    "grpcio>=1.47.0",
    "grpcio-tools>=1.47.0",
    "protobuf>=3.20.0",
]
rest = [
    "fastapi>=0.75.0",
    "uvicorn>=0.17.0",
]
tushare = [
    "tushare>=1.2.10",
]
backtrader = [
    "backtrader>=1.9.78",
]
kronos = [
    "torch>=2.0.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.3",
    "einops>=0.7.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.5.0",
]

[project.scripts]
nq = "nq.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nq*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

